testing/macro-tests/tests/ui/index_many_cardinality_field.stderr
error: cannot add an index field with many cardinality
  --> tests/ui/index_many_cardinality_field.rs:17:20
   |
17 |     index(fields = "tags"),
   |                    ^^^^^^
